--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Juste un titre</h1>
+    <ul>
+        <li><a href="accueil.html">Accueil</a></li>
+        <li><a href="">Apropos</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Portfolio</a></li>
+    </ul>
 </body>
 </html>
