--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="">Accueil</a></li>
+        <li><a href="accueil.html">Accueil</a></li>
         <li><a href="">Apropos</a></li>
         <li><a href="">Contact</a></li>
         <li><a href="">Portfolio</a></li>
